--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: ruby
-cache: bundler
+#cache: bundler
 
 rvm:
-- 2.4.1
+- 2.5
+
+before_install:
+    - yes | gem update --system --force
+    - gem install bundler
+
+#install:
+#  - bundle install --jobs=3 --retry=3
 
 script:
   - gem build cassandra-web.gemspec
