--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: ruby
 #cache: bundler
 
 rvm:
-- 2.5
+- 2.6
 
 before_install:
     - yes | gem update --system --force
     - gem install bundler
+    - bundle install
 
 #install:
 #  - bundle install --jobs=3 --retry=3
