--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ rvm:
 
 before_install:
     - yes | gem update --system --force
-    - gem install bundler
-    - bundle install
+    - gem install bundler -v 2.1.4
+    - bundle _2.1.4_ install
 
 #install:
 #  - bundle install --jobs=3 --retry=3
