--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_install:
     - gem install bundler -v 2.1.4
     - bundle _2.1.4_ install
 
+install:
+  - bundle _2.1.4_ install
 #install:
 #  - bundle install --jobs=3 --retry=3
 
