--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,12 @@ rvm:
 
 before_install:
     - yes | gem update --system --force
-    - gem install bundler -v 2.1.4
+    - gem install bundler
     - bundle _2.1.4_ install
 
 install:
+  - gem install bundler
   - bundle _2.1.4_ install
-#install:
-#  - bundle install --jobs=3 --retry=3
 
 script:
   - gem build cassandra-web.gemspec
