--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,15 @@ rvm:
 
 before_install:
     - yes | gem update --system --force
-    - gem install bundler
 
 install:
   - gem install bundler
 
 script:
   - gem build cassandra-web.gemspec
-  - docker build . --no-cache -f Dockerfile -t $DOCKER_HUB_IMAGE
+  - docker build . --no-cache -t cassandra-web
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker push $DOCKER_HUB_IMAGE
+  - docker push cassandra-web
 
 env:
   global:
