--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-#cache: bundler
+cache: bundler
 
 rvm:
 - 2.6
@@ -12,9 +12,9 @@ install:
 
 script:
   - gem build cassandra-web.gemspec
-  - docker build . --no-cache -f Dockerfile -t latest
+  - docker build . --no-cache -f Dockerfile -t $DOCKER_HUB_IMAGE
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker push cassandra-web:latest
+  - docker push $DOCKER_HUB_IMAGE
 
 env:
   global:
