--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
 
 script:
   - gem build cassandra-web.gemspec
-  - docker build . --no-cache -f Dockerfile -t $DOCKER_HUB_IMAGE
+  - docker build . --no-cache -f Dockerfile -t latest
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker push $DOCKER_HUB_IMAGE
+  - docker push latest
 
 env:
   global:
