--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - gem build cassandra-web.gemspec
   - docker build . --no-cache -f Dockerfile -t latest
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker push latest
+  - docker push nickworlds/cassandra-web:latest
 
 env:
   global:
