--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ install:
 
 script:
   - gem build cassandra-web.gemspec
-  - docker build . --no-cache -f Dockerfile -t latest
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker push nickworlds/cassandra-web:latest
+  - docker build . --no-cache -f Dockerfile -t latest && docker push nickworlds/cassandra-web:latest
 
 
 #env:
