--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
 script:
   - gem build cassandra-web.gemspec
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker build . --no-cache -f Dockerfile -t latest && docker push nickworlds/cassandra-web:latest
+  - docker build . --no-cache -f Dockerfile -t nickworlds/cassandra-web:latest 
+  - docker push nickworlds/cassandra-web:latest
 
 
 #env:
