--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
   - gem build cassandra-web.gemspec
   - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-  - docker build . --no-cache -f ./Dockerfile -t nickworlds/cassandra-web:1.0.2 
+  - docker build . --no-cache -f Dockerfile -t nickworlds/cassandra-web:1.0.2 
   - docker push nickworlds/cassandra-web:1.0.2
 
 
